kubernetes/13_ingress/configs/eg1-ingress/svc-ClusterIP-httpd.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-clusterip-httpd   # this is the service endpoint that has a dns entry that we can curl for. 
spec:
  type: ClusterIP 
  ports:
    - port: 4000
      targetPort: 80
  selector:
    component: httpd_pod
